# motospastrefa-website

./: .gitignore  INSTRUKCJA-WDROZENIA.md  casino_scanner.py  dex_scraper.py  dex_security_report.md  package-lock.json  package.json  vulnerability_report.md
ChomikDownloads/: download_chomik.py  output.txt  page.html
esp32s3_multitool/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32s3_multitool/main/: CMakeLists.txt  config.h  input.c  input.h  ir_rmt.c  ir_rmt.h  main.c  nfc_pn532.c  nfc_pn532.h  rf_cc1101.c  rf_cc1101.h  ui.c  ui.h  wifi_net.c  wifi_net.h
monitor-calibration/: MonitorekDaemon  MonitorekDaemon.swift  README.md  monitorek
src/: styles.css
src/assets/: motospastrefa-logo.png.asset.json
src/hooks/: useReveal.ts
src/routes/: __root.tsx  index.tsx
